# ArmySync

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
electron/: main.ts
src/: App.tsx  constants.ts  effect.d.ts  theme.d.ts  types.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs.rs  lib.rs  main.rs  menu.rs  waveform.rs
src-tauri/src/ble/: mod.rs  protocol.rs
src-tauri/src/effects/: mod.rs  waveform.rs
src-tauri/src/project/: mod.rs  recent.rs
src-tauri/src/sync/: handlers.rs  mod.rs
src/app/: App.tsx  app.tsx  globals.css  main.tsx
src/components/: color-picker-popover.tsx  devices-modal.tsx  download-modal.tsx  icon-button.tsx  modal.tsx  resize-panel.tsx  skeleton.tsx  slider.tsx  tap-sync-button.tsx
src/components/Bomb/: index.tsx  styles.ts
src/components/Effect/: index.ts  index.tsx  styles.ts
src/components/Player/: index.tsx  styles.ts
src/domains/effects/: index.ts  registry.ts  types.ts
src/domains/lightstick/: index.ts
src/domains/media/: index.ts
src/lib/: animations.ts  audio.ts  color.ts  math.ts  use-keybind.ts  validation.ts
src/pages/Main/: index.tsx
src/services/: effect.ts  file.ts  player.ts
src/stores/: app-store.ts  ble-store.ts  editor-refs.ts  editor-store.ts  use-transient-time.ts
src/styles/: global.style.ts
src/utils/: color.ts  format.ts  hooks.ts  math.ts  others.ts
webpack/: react.webpack.js
(+45 files in other folders)
