[package]
name = "army-sync"
version = "0.1.0"
description = "BTS Army Bomb lightstick controller and animation editor"
authors = ["Aldriê Mizobuti"]
edition = "2021"

[lib]
name = "army_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
